# hse-sundai-hack-interview-assistant

./: .env  .gitignore  README.md  hse-sundai  main.py  manifest.json  popup.js  pyproject.toml  requirements.txt  styles.css
agent/: graph.py  settings.py
backend/: main.py
backend/interview_assistant/: interview_data.db  main.py  openapi.yaml  prompt.txt  run.py
backend/interview_assistant/api/: routers.py
backend/interview_assistant/core/: config.py  model.py
backend/interview_assistant/service/: llm_service.py
backend/voice assistant/: download_model.py
backend/voice_assistant/: voice_model.py  voice_model_intreface.py
browser_extention/: manifest.json  popup.html  popup.js  styles.css
lta/: main2.py
